--- a/ch9nd-sy5nb-xc3fe-assign3/css/main.css
+++ b/ch9nd-sy5nb-xc3fe-assign3/css/main.css
@@ -1,5 +1,5 @@
 h1 {
-  color: cadetblue;
+  color: cadetblue; 
 }
 
 #question {
@@ -116,4 +116,8 @@ div {
 #modalBtn:disabled {
     color:mediumaquamarine; 
     cursor:auto; 
+}
+
+#endgame:hover {
+    color:yellow;
 }
